Completed thesis, finally!
Signed-off-by: Ariel D'Alessandro <ariel@vanguardiasur.com.ar>

--- a/all.bib
+++ b/all.bib
@@ -707,22 +707,32 @@
 }
 
 @article{geiger2013vision,
-	author={Geiger, Andreas and Lenz, Philip and Stiller, Christoph and Urtasun, Raquel},
-	title={Vision Meets Robotics: The KITTI Dataset},
-	journal={Int. J. Rob. Res.},
-	issue_date={September 2013},
-	volume={32},
-	number={11},
-	month=sep,
-	year={2013},
-	issn={0278-3649},
-	pages={1231--1237},
-	numpages={7},
-	url={http://dx.doi.org/10.1177/0278364913491297},
-	doi={10.1177/0278364913491297},
-	acmid={2528333},
-	publisher={Sage Publications, Inc.},
-	address={Thousand Oaks, CA, USA},
+	author = {Geiger, Andreas and Lenz, Philip and Stiller, Christoph and Urtasun, Raquel},
+	title = {{Vision Meets Robotics: The KITTI Dataset}},
+	journal = {The International Journal of Robotics Research, IJRR},
+	volume = {32},
+	number = {11},
+	month = {September},
+	year = {2013},
+	issn = {0278-3649},
+	pages = {1231--1237},
+	numpages = {7},
+	url = {http://dx.doi.org/10.1177/0278364913491297},
+	doi = {10.1177/0278364913491297},
+	acmid = {2528333},
+	publisher = {Sage Publications, Inc.},
+	address = {Thousand Oaks, CA, USA},
+}
+
+@INPROCEEDINGS{peris2012towards,
+	author={M. Peris and S. Martull and A. Maki and Y. Ohkawa and K. Fukui},
+	booktitle={Proceedings of the 21st International Conference on Pattern Recognition (ICPR)},
+	title={{Towards a simulation driven stereo vision system}},
+	year={2012},
+	pages={1038--1042},
+	doi = {10.1109/CIM.1990.128110},
+	ISSN={1051-4651},
+	month={November}
 }
 
 @INPROCEEDINGS{engel2015large,
